ingress_controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-deployment-1
spec:
  selector:
    matchLabels:
      app: practice-deployment
  template:
    metadata:
      labels:
        app: practice-deployment
    spec:
      containers:
      - name: practice-deployment
        image: 09036229746/practice_app:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name:  practice-port
---

apiVersion: v1
kind: Service
metadata:
  name: practice-app-service-1
spec:
  selector:
    app: practice-deployment
  ports:
  - port: 80
    targetPort: practice-port


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-deployment-2
spec:
  selector:
    matchLabels:
      app: practice-deployment-2
  template:
    metadata:
      labels:
        app: practice-deployment-2
    spec:
      containers:
      - name: practice-deployment-2
        image: 09036229746/practice_app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name:  practice-port-2

---

apiVersion: v1
kind: Service
metadata:
  name: practice-app-service-2
spec:
  selector:
    app: practice-deployment-2
  ports:
  - port: 80
    targetPort: practice-port-2
